--- a/Oppimispäiväkirja_V_3.0/Views/Aihes/Delete.cshtml
+++ b/Oppimispäiväkirja_V_3.0/Views/Aihes/Delete.cshtml
@@ -77,7 +77,7 @@
 
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" onclick="return confirm('Haluatko varmasti poistaa tämän aiheen?');" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
