melkein valmis päiväkirjaprojekti

--- a/Oppimispäiväkirja_V_3.0/Views/Aihes/Create.cshtml
+++ b/Oppimispäiväkirja_V_3.0/Views/Aihes/Create.cshtml
@@ -23,7 +23,7 @@
         </div>
         <div class="card text-center">
             <div class="d-grid gap-2 col-2 mx-auto">
-                <button class="me-md-2"
+                <button class="me-md-2 LisääPainike"
                         type="button"
                         data-bs-toggle="collapse"
                         href="#multiCollapseExample1"
