--- a/Oppimispäiväkirja_V_3.0/Views/Aihes/Edit.cshtml
+++ b/Oppimispäiväkirja_V_3.0/Views/Aihes/Edit.cshtml
@@ -18,66 +18,67 @@
     <title>Document</title>
 </head>
 
-<h1>Edit</h1>
+<body id="bootstrap-override">
+    <h1 class="muokkaussivunkeskitys">Muokkaa</h1>
 
-<h4>Topic</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
+    <h4 class="muokkaussivunkeskitys">Aihe</h4>
+    <hr />
+
+    <div class="row">
+        <div id="muokkausKortti" class="col-md-4">
+            <div class="card text-center topic-card">
+                <form asp-action="Edit">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <input type="hidden" asp-for="Id" />
+                    <div class="form-group">
+                        <label asp-for="Title" class="control-label">Otsikko</label>
+                        <input asp-for="Title" class="form-control" />
+                        <span asp-validation-for="Title" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Description" class="control-label">Kuvaus</label>
+                        <input asp-for="Description" class="form-control" />
+                        <span asp-validation-for="Description" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="TimeToMaster" class="control-label">Arvioitu kesto</label>
+                        <input asp-for="TimeToMaster" class="form-control" />
+                        <span asp-validation-for="TimeToMaster" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="TimeSpent" class="control-label">Käytetty aika</label>
+                        <input asp-for="TimeSpent" class="form-control" />
+                        <span asp-validation-for="TimeSpent" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Source" class="control-label">Lähde</label>
+                        <input asp-for="Source" class="form-control" />
+                        <span asp-validation-for="Source" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="StartLearningDate" class="control-label">Aloitus ajankohta</label>
+                        <input asp-for="StartLearningDate" class="form-control" />
+                        <span asp-validation-for="StartLearningDate" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="InProgress" class="control-label">Aihe yhä kesken?</label>
+                        <input asp-for="InProgress" class="form-control" />
+                        <span asp-validation-for="InProgress" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="CompletionDate" class="control-label">Lopetus ajankohta</label>
+                        <input asp-for="CompletionDate" class="form-control" />
+                        <span asp-validation-for="CompletionDate" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Save" class="btn btn-primary" />
+                    </div>
+                </form>
             </div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="TimeToMaster" class="control-label"></label>
-                <input asp-for="TimeToMaster" class="form-control" />
-                <span asp-validation-for="TimeToMaster" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="TimeSpent" class="control-label"></label>
-                <input asp-for="TimeSpent" class="form-control" />
-                <span asp-validation-for="TimeSpent" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Source" class="control-label"></label>
-                <input asp-for="Source" class="form-control" />
-                <span asp-validation-for="Source" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="StartLearningDate" class="control-label"></label>
-                <input asp-for="StartLearningDate" class="form-control" />
-                <span asp-validation-for="StartLearningDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="InProgress" class="control-label"></label>
-                <input asp-for="InProgress" class="form-control" />
-                <span asp-validation-for="InProgress" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CompletionDate" class="control-label"></label>
-                <input asp-for="CompletionDate" class="form-control" />
-                <span asp-validation-for="CompletionDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
+</body>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
