--- a/Oppimispäiväkirja_V_3.0/Views/Aihes/ShowSearchForm.cshtml
+++ b/Oppimispäiväkirja_V_3.0/Views/Aihes/ShowSearchForm.cshtml
@@ -18,7 +18,7 @@
         </div>
         <div class="card text-center">
             <div class="d-grid gap-2 col-2 mx-auto">
-                <button class="me-md-2"
+                <button class="me-md-2 EtsiPainike"
                         type="button"
                         data-bs-toggle="collapse"
                         href="#multiCollapseExample1"
