--- a/Oppimispäiväkirja_V_3.0/Views/Shared/_Layout.cshtml
+++ b/Oppimispäiväkirja_V_3.0/Views/Shared/_Layout.cshtml
@@ -13,22 +13,23 @@
                     <ul class="navbar-nav flex-grow-1">
 
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Aihes" asp-action="Create">Luo uusi aihe</a>
+                            <button id="btn-css" class="btn btn-primary"><a class="nav-link text-light" asp-area="" asp-controller="Aihes" asp-action="Create">Luo uusi aihe</a></button>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Aihes" asp-action="">Aiheet</a>
+                            <button id="btn-css1" class="btn btn-css btn-primary"><a class="nav-link text-light" asp-area="" asp-controller="Aihes" asp-action="">Aiheet</a></button>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Aihes" asp-action="ShowSearchForm">Etsi</a>
+                            <button id="btn-css2" class="btn btn-css btn-primary"><a class="nav-link text-light" asp-area="" asp-controller="Aihes" asp-action="ShowSearchForm">Etsi</a> </button>
                         </li>
 
 
 
 
                     </ul>
-                    <div class="infoButton">
-                        <input type="button" value="Ohje" onclick="myFunction()" class="btn btn-info" />
-                    </div>
+
+                </div>
+                <div class="infoButton">
+                    <input type="button" value="Ohje" onclick="myFunction()" class="btn btn-info btn-lg" />
                 </div>
             </div>
         </nav>
@@ -41,7 +42,7 @@
     <div id="ohjeet-tähän" class="container">
         <div class="card text-center">
             <h1>Tässä ohjeet: </h1>
-            <p id="ohjeet-tähän-p">Valitse yläriviltä mikäli haluat luoda uuden aiheen, katso aiheita tai etsiä aiheen ID:n tai otsikon perusteella</pohjeet-tähän-p>
+            <p id="ohjeet-tähän-p">Valitse yläriviltä mikäli haluat luoda uuden aiheen, katso aiheita tai etsiä aiheen ID:n tai otsikon perusteella</p>
         </div>
     </div>
 
